@@ -1,6 +1,7 @@
 libece 0.2a (DD/MM/YYYY):
 	- test/sb += double-CA/SNI test case
 	- SB Json error logging
+	- SB API: POST plain string parameters instead of Json
 
 libece 0.1a (16/08/2013):
 	- first alpha release for testing/integration
